feat: Add complete review system for products - Added review management for admin (create, edit, delete, hide/show reviews) - Added product review feature for users (rate, comment, upload images) - Added review validation and authorization - Added rating display and filter by stars - Updated product model to include averageRating and totalReviews - Improved UI/UX for review forms and lists

--- a/datn-backend/.env
+++ b/datn-backend/.env
@@ -1,5 +1,5 @@
 # MongoDB URI
-MONGOOSE_URI = 'mongodb+srv://Admin:admin123456@tlcn.g0yht.mongodb.net/thucphamchay?retryWrites=true&w=majority&appName=TLCN'
+MONGOOSE_URI = 'mongodb+srv://21110339_db_user:OZp2FjzUHfCSAJg9@thucphamchay.lhqp2ix.mongodb.net/thucphamchay?appName=ThucPhamChay'
 
 #HTTP
 HTTP = "http://localhost:8000"
