Add chat feature with real-time messaging system

--- a/datn-admin-quan-ly-cua-hang/.env
+++ b/datn-admin-quan-ly-cua-hang/.env
@@ -1,2 +1,2 @@
-VITE_API = 'http://localhost:8000/api'
+VITE_API=http://localhost:8000/api
 MONGOOSE_DB = 'mongodb+srv://Admin:admin123456@tlcn.g0yht.mongodb.net/thucphamchay?retryWrites=true&w=majority&appName=TLCN'
