Implement OTP verification for user registration and login
- Add isVerified field to User model
- Implement OTP sending via email with Redis storage
- Add verify-otp and resend-otp APIs
- Create VerifyOtp page with countdown and resend functionality
- Update registration flow to require OTP verification
- Prevent Google login if email already registered with password
- Update login to redirect to OTP page if unverified

--- a/datn-backend/.env
+++ b/datn-backend/.env
@@ -49,3 +49,12 @@ VNP_URL="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"
 # VNP_URL="https://sandbox.vnpayment.vn/token_ui/pay-create-token.html"
 VNP_TMNCODE = "0NAC2BZW"
 VNP_HASHSECRET = "AKQGTMHAUVVJONTQYGIBVQFFDRIHLWRX"
+
+# Gemini 
+GEMINI_API_KEY=AIzaSyC0hPdxU1lGSB6tAUJzvGYjkFmmkqA5Uu8
+GEMINI_MODEL=gemini-2.5-flash
+
+
+REDIS_URL=redis://127.0.0.1:6379
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
