--- a/datn-backend/package.json
+++ b/datn-backend/package.json
@@ -50,6 +50,7 @@
     "passport-twitter": "^1.0.4",
     "qs": "^6.11.2",
     "random": "^4.1.0",
+    "redis": "^5.9.0",
     "rimraf": "^5.0.1",
     "slugify": "^1.6.6",
     "socket.io": "^4.7.2",
