--- a/datn-backend/package.json
+++ b/datn-backend/package.json
@@ -25,6 +25,7 @@
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cosine-similarity": "^1.0.1",
     "crypto": "^1.0.1",
     "datn-backend": "file:",
     "dotenv": "^16.3.1",
@@ -34,12 +35,14 @@
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
+    "ml-matrix": "^6.12.1",
     "moment": "^2.29.4",
     "mongodb": "^5.8.1",
     "mongoose": "^7.5.3",
     "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "natural": "^8.1.0",
     "node-nlp": "^4.27.0",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
