feat: Finalized all pending local changes and tested successfully

--- a/datn-backend/.env
+++ b/datn-backend/.env
@@ -38,6 +38,8 @@ CALLBACKURLGOOGLE = "/auth/google/callback"
 # email
 MAIL_ID='testnixomg123@gmail.com'
 MP='ltexccimxocdqeiv'
+EMAIL_USER='testnixomg123@gmail.com'
+EMAIL_APP_PASSWORD='ltexccimxocdqeiv'
 
 #stripe
 JWT_STRIPE = "stripe_jwt"
