--- a/datn-frontend/package.json
+++ b/datn-frontend/package.json
@@ -38,6 +38,7 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.3.1",
