--- a/datn-backend/src/docs/order.doc.yaml
+++ b/datn-backend/src/docs/order.doc.yaml
@@ -4,7 +4,7 @@ info:
   version: '1.0.0'
   title: 'Swagger Quản lý dự án framework 2'
   contact:
-    email: 'hungdang02042003@gmail.com'
+    email: 'truong108nguyen@gmail.com'
   license:
     name: 'Nginx'
 tags:
