fix: vnPay payment && add Stripe payment

--- a/datn-backend/.env
+++ b/datn-backend/.env
@@ -49,8 +49,10 @@ STRIPE_SECRET_KEY = "sk_test_51QSM6IJkttox44izWI4Xu3GacZCLthW3WLCpCJihnECOLLaOTt
 
 VNP_URL="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"
 # VNP_URL="https://sandbox.vnpayment.vn/token_ui/pay-create-token.html"
-VNP_TMNCODE = "0NAC2BZW"
-VNP_HASHSECRET = "AKQGTMHAUVVJONTQYGIBVQFFDRIHLWRX"
+VNP_TMNCODE = "O5C5LR2V"
+VNP_HASHSECRET = "O6DZ0NTSK317I80BRUVDEBCGKJ8ZRP2Q"
+# VNP_TMNCODE="K3AIC7YC"
+# VNP_HASHSECRET="LTKKK243BOE5WOV7QO6H2V8L6LICTCW4"
 
 # Gemini 
 GEMINI_API_KEY=AIzaSyC0hPdxU1lGSB6tAUJzvGYjkFmmkqA5Uu8
